# squirrel

./: .gitignore  Cargo.toml  NOTES.md  README.md  TODO.md  build-web.py  build.rs  index.html
.github/workflows/: ubuntu.yml
content/: crate_specular.dds  demo_cube.mtl  matrix_emissive.dds
pygametools/: web_build.py
pygametools/lib/: build.py  webserver.py
pygametools/tests/: test_build.py
src/: camera.rs  content.rs  game_app.rs  gameplay.rs  lib.rs  main.rs  math_utils.rs  meshes.rs  platform.rs  renderer.rs  renderer_window.rs  shader.wgsl  shaders.rs  standard_shader.wgsl  textures.rs  wasm_support.rs
src/assets/: crate_diffuse.dds  depth_buffer.wgsl
src/content/: obj_model.rs
src/game_app/: multi_cube_demo.rs
src/platform/: fileio.rs  time.rs
src/renderer/: debug.rs  debug_state.rs  gpu_buffers.rs  instancing.rs  lighting.rs  materials.rs  meshes.rs  models.rs  passes.rs  scene.rs  shaders.rs  shading.rs  textures.rs  uniforms_buffers.rs
src/renderer/passes/: debug_pass.rs  debug_shader.wgsl  depth_pass.rs  light_debug_pass.rs
src/renderer/shaders/: lit_shader.wgsl  packed_structs.rs
