[package]
edition = "2021"
name = "squirrel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tracing-log = { version = "0.1", features = ["env_logger"] }
winit = "0.29"
wgpu = "0.19"
pollster = "0.3.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
cfg-if = "1.0.0"
bytemuck = { version = "1.15.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
